--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,12 +26,12 @@
         android:textSize="@dimen/textSizeButton" />
 
     <EditText
+        android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
         android:layout_below="@+id/button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="41dp"
-        android:text="Label"
-        android:autoText="false" />
+        android:autoText="false"
+        android:text="Label" />
 </RelativeLayout>
